# src/routes/stockRoutes.ts
@@ -1,13 +1,13 @@
-import { Router } from 'express';
-import { createUser } from '../controllers/UserController';
-import { createCopy, deleteCopyById, findCopyById, listCopies, updateAvailabilityById } from '../controllers/StockController';
+// import { Router } from 'express';
+// import { createUser } from '../controllers/UserController';
+// import { createCopy, deleteCopyById, findCopyById, listCopies, updateAvailabilityById } from '../controllers/StockController';
 
-const stockRoutes = Router();
+// const stockRoutes = Router();
 
-stockRoutes.post('/', createCopy);
-stockRoutes.get('/', listCopies);
-stockRoutes.get('/:codigo', findCopyById);
-stockRoutes.put('/:codigo', updateAvailabilityById);
-stockRoutes.delete('/:codigo', deleteCopyById);
+// stockRoutes.post('/', createCopy);
+// stockRoutes.get('/', listCopies);
+// stockRoutes.get('/:codigo', findCopyById);
+// stockRoutes.put('/:codigo', updateAvailabilityById);
+// stockRoutes.delete('/:codigo', deleteCopyById);
 
-export default stockRoutes;
+// export default stockRoutes;
